added hyperlinks and description in the card body to projects images

--- a/index.html
+++ b/index.html
@@ -81,22 +81,26 @@
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
             <div class='card'>
               <div id="project1">
+                <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank">
                 <div id="transparent">
                   <div class="card-title">
                     <h2 class="title-bg">Password Generator</h2>
                   </div>
 
                   <div class="card-body">
-                    <figure>
-                      <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank"></a>
+                    <h5> A webapp which generates a secure password from an array of characters</h5>
+                    
+                  </div>  
 
                       <div class="card-footer">
                         <figcaption id="projectcaption">
                           <h5> CSS3 / Vanilla JS</h5>
+                          <h6>Go to website</h6>
                         </figcaption>
-                    </figure>
+                   
                   </div>
                 </div>
+              </a>  
               </div>
             </div>
           </div>
@@ -107,26 +111,24 @@
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class='card'>
               <div id="project2">
-                <div id="transparent">
-                  <div class="card-title">
-                    <h2 class="title-bg"> STUDEAT - Food for Students</h2>
-                  </div>
+                <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
+                  target="_blank">
+                  <div id="transparent">
+                    <div class="card-title">
+                      <h2 class="title-bg"> STUDEAT - Food for Students</h2>
+                    </div>
 
-                  <div class="card-body">
-                    <figure>
-                      <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
-                        target="_blank">
-                      </a>
-                    </figure>
-
+                    <div class="card-body">
+                      <h5>App designed for university students to order food from local canteens and restaurants.</h5>
+                    </div>
                     <div class="card-footer">
                       <figcaption id="projectcaption">
-                        <h5> UX Prototype in Figma</h5>
-                        <h5>App Coming Soon! </h5>
+                        <h5> UX Research / UX Design / Figma Prototype </h5>
+                        <h6>Coming Soon! </h6>
                       </figcaption>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
           </div><!--columns ends here-->
@@ -134,24 +136,25 @@
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class='card' class="projects">
               <div id="project3">
+                <a href="https://lapworthaaron.github.io/Football_stats/"
+                  target="_blank">
                 <div id="transparent">
                   <div class="card-title">
-                    <h2 class="title-bg"> Flight Booking Site</h2>
+                    <h2 class="title-bg"> Football Stats </h2>
                   </div>
 
                   <div class="card-body">
-                    <figure>
-
-                    </figure>
-
+                    <h5> Website to see the latest football results and search your favorite football players.</h5>
+                  </div>  
                     <div class="card-footer">
                       <figcaption id="projectcaption">
-                        <h5> FIGMA / CSS3 / REACT JS / SQL / </h5>
-                        <h5>Coming Soon!</h5>
+                        <h5> FIGMA / HTML / CSS3 / BOOTSTRAP / JS /API </h5>
+                        <h6> Go to Website</h6>
                       </figcaption>
                     </div>
                   </div>
                 </div>
+              </a>  
               </div>
             </div>
           </div><!--columns ends here-->
@@ -168,14 +171,13 @@
                   </div>
 
                   <div class="card-body">
-                    <figure>
-                    </figure>
+                      <h5> Shop for your favorite designer brands at a fraction of a price</h5>
                   </div>
 
                   <div class="card-footer">
                     <figcaption id="projectcaption">
                       <h5> FIGMA / WORDPRESS / WOOCOMMERCE </h5>
-                      <h5>Coming Soon!</h5>
+                      <h6>Coming Soon!</h6>
                     </figcaption>
                   </div>
                 </div>
@@ -189,20 +191,18 @@
               <div id="project5">
                 <div id="transparent">
                   <div class="card-title">
-                    <h2 class="title-bg"> Bus Booking Website </h2>
+                    <h2 class="title-bg"> Yalala </h2>
                   </div>
 
                   <div class="card-body">
-                    <figure>
+                    <h5> Search for events , meet new people , book sport venues in your city.</h5>
+                  </div>
 
-                    </figure>
-
-
-                    <div class="card-footer">
-                      <figcaption id="projectcaption">
-                        <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
-                      </figcaption>
-                    </div>
+                  <div class="card-footer">
+                    <figcaption id="projectcaption">
+                      <h5> ADOBE XD / HTML5 / CSS3 / JS </h5>
+                      <h6>  Coming Soon</h6>
+                    </figcaption>
                   </div>
                 </div>
               </div>
