--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!--Grid container for the project images and caption-->
         <!-- <div id="projectsGrid"> -->
         <!--1st row of project/work -->
-        <div class="row" class="projects">
+        <div class="row" id="projects">
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
             <div class='card'>
               <div id="project1">
@@ -107,7 +107,7 @@
         </div>
 
         <!--2nd row of grid/projects-->
-        <div class="row" class="projects">
+        <div class="row" id="projects">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class='card'>
               <div id="project2">
@@ -134,7 +134,7 @@
           </div><!--columns ends here-->
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
-            <div class='card' class="projects">
+            <div class='card'>
               <div id="project3">
                 <a href="https://lapworthaaron.github.io/Football_stats/"
                   target="_blank">
@@ -161,7 +161,7 @@
         </div> <!--row ends here-->
 
         <!--3rd row for projects/work-->
-        <div class="row" class="projects">
+        <div class="row" id="projects">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
             <div class="card" class="projects">
               <div id="project4">
