reordered buttons in footer to match structure of webpage

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       </article>
 
       <!-- <div class="getInTouchBtn"> -->
-      <button type="button" class="btn btn-light contactMeBtn"><a href="#articleContactMe"> Get in Touch </a> </button>
+      <button type="button" class="btn btn-light contactMeBtn"><a href="#contactLabel"> Get in Touch </a> </button>
       <!-- </div> -->
       <!-- </section> -->
 
@@ -410,7 +410,7 @@
         </div>
       </div>
 
-      <div class="row" id="">
+      <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
           <article class="articleContactMe">
             <div id="call">
@@ -463,9 +463,9 @@
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
         <div class="footerbtnContainer">
           <button type="button" class="btn btn-light footerBtn"><a href="#nav"> Home </a> </button>
-          <button type="button" class="btn btn-light footerBtn"> <a href="#profilePic"> About Me </a></button>
           <button type="button" class="btn btn-light footerBtn"> <a href="#workAside"> Work </a> </button>
           <button type="button" class="btn btn-light footerBtn"> <a href="#skillsAside"> Skills </a></button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#profilePic"> About Me </a></button>
           <button type="button" class="btn btn-light footerBtn"> <a href="#resumeAside">Resume </a></button>
         </div>
       </div>
