re-arranged navbar and added relevant links for navigation

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </div>
 
       <ul class="navMenulist">
-        <li> <a href="#profilePic"> About Me </a></li>
+        
         <li> <a href="#workAside"> Work </a></li>
-        <li> <a href="#asideContactMe"> Contact Me </a></li>
+        <li> <a href="#asideSkills"> Skills </a></li>
+        <li> <a href="#aboutMeGrid"> About Me </a></li>
         <li> <a href="#asideResume"> Resume </a> </li>
       </ul>
     </nav>
@@ -463,10 +464,10 @@
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
         <div class="footerbtnContainer">
           <button type="button" class="btn btn-light footerBtn"><a href="#nav"> Home </a> </button>
-          <button type="button" class="btn btn-light footerBtn"> <a href="#workAside"> Work </a> </button>
-          <button type="button" class="btn btn-light footerBtn"> <a href="#skillsAside"> Skills </a></button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#workGrid"> Work </a> </button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#skillsGrid"> Skills </a></button>
           <button type="button" class="btn btn-light footerBtn"> <a href="#profilePic"> About Me </a></button>
-          <button type="button" class="btn btn-light footerBtn"> <a href="#resumeAside">Resume </a></button>
+          <button type="button" class="btn btn-light footerBtn"> <a href="#resumeGrid">Resume </a></button>
         </div>
       </div>
 
