adjusted background size,opacity and images for projects grid

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!--1st row of project/work -->
         <div class="row" id="projects">
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm12">
-            <div class='card'>
+            <div class='card' class="projectsCard">
               <div id="project1">
                 <a href="https://adil7-a7.github.io/Nextgen-Password-Generator/" target="_blank">
                 <div id="transparent">
@@ -110,7 +110,7 @@
         <!--2nd row of grid/projects-->
         <div class="row" id="projects">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
-            <div class='card'>
+            <div class='card' class="projectsCard">
               <div id="project2">
                 <a href="https://www.figma.com/file/UaobHZz39cLNCvoZaCrK2B/StudEat?node-id=0%3A1&t=lomoeXHJKrs3rIcp-1"
                   target="_blank">
@@ -164,7 +164,7 @@
         <!--3rd row for projects/work-->
         <div class="row" id="projects">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
-            <div class="card" class="projects">
+            <div class="card" class="projectsCard">
               <div id="project4">
                 <div id="transparent">
                   <div class="card-title">
@@ -188,7 +188,7 @@
 
           <!--2nd column-->
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm12">
-            <div class="card" class="projects">
+            <div class="card" class="projectsCard">
               <div id="project5">
                 <div id="transparent">
                   <div class="card-title">
